kubernetes/energy-monitoring/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: energy-prometheus
spec:
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: energy
  ports:
  - name: http-web
    port: 9090
    targetPort: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: energy-prometheus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: prometheus-energy.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: energy-prometheus
            port:
              name: http-web
  tls:
  - hosts:
    - prometheus-energy.home.cambridge.me
    secretName: prometheus-energy-home-cambridge-me-tls
